<resources>

    <string name="app_name">Escapeovator</string>

    <string name="floor_label">Floor:</string>

    <string name="note_label">Note: </string>

    <string name="note_hint">Type the note here</string>

    <string name="parent_floor">Parent</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="floor_1">1</string>

    <string name="floor_2">2</string>

    <string name="floor_3">3</string>

    <string name="floor_4">4</string>

    <string name="floor_5">5</string>

    <string name="lobby_elevator">_</string>

    <string name="ballroom">Ballroom</string>

    <string name="maintenance">Maintenance</string>

    <string name="hotel">Hotel Room</string>

    <string name="managers_office">Manager\'s Office</string>

    <string name="dark_hallway">Dark Hallway</string>

    <string name="note_button">Open Notepad</string>

    <string name="new_note_button">Add New Note</string>

    <string name="enter_floor">Enter Floor</string>

    <string name="safe_code">Safe: 64209</string>

    <string name="missing_floor_input">Select Floor</string>

    <string name="elevator">Elevator</string>

    <string name="victory">Congratulations! You won!</string>

    <string name="play_again">Play Again?</string>

    <string name="wrong_key">It doesn\'t fit.</string>
</resources>