<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/floor_number_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/floor_label"/>

    <EditText
        android:id="@+id/floor_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"/>
    <!--Change line above to android:editable="false" if it doesn't work-->

    <TextView
        android:id="@+id/note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_label"/>

    <EditText
        android:id="@+id/note_textbox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/note_hint"/>

    <ImageButton
        android:id="@+id/note_image"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_launcher_foreground"/>

</LinearLayout>